constants-deployment.yaml
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "streamer"
  namespace: "default"
  labels:
    app: "streamer"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "streamer"
  template:
    metadata:
      labels:
        app: "streamer"
    spec:
      containers:
      - name: "streamer"
        image: "gcr.io/polititweet/github.com/milesmcc/polititweet"
        command: ["python", "manage.py", "stream"]
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "scanner"
  namespace: "default"
  labels:
    app: "scanner"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "scanner"
  template:
    metadata:
      labels:
        app: "scanner"
    spec:
      containers:
      - name: "scanner"
        image: "gcr.io/polititweet/github.com/milesmcc/polititweet"
        command: ["python", "manage.py", "scan", "--infinite"]
---
  apiVersion: "batch/v1beta1"
  kind: "CronJob"
  metadata:
    name: "tweeter"
    namespace: "default"
    labels:
      app: "tweeter"
  spec:
    schedule: "*/30 * * * *"
    jobTemplate:
      spec:
        template:
          spec:
            restartPolicy: OnFailure
            containers:
            - name: "tweeter"
              image: "gcr.io/polititweet/github.com/milesmcc/polititweet:2a2cbda"
              command: ["python", "manage.py", "push_alert_tweet", "30"]
              env:
              - name: ALERT_CONSUMER_KEY
                valueFrom:
                  secretKeyRef:
                    name: alert-twitter-credentials
                    key: consumer_key
              - name: ALERT_CONSUMER_SECRET
                valueFrom:
                  secretKeyRef:
                    name: alert-twitter-credentials
                    key: consumer_secret
              - name: ALERT_ACCESS_TOKEN
                valueFrom:
                  secretKeyRef:
                    name: alert-twitter-credentials
                    key: access_token
              - name: ALERT_ACCESS_SECRET
                valueFrom:
                  secretKeyRef:
                    name: alert-twitter-credentials
                    key: access_secret
              - name: DB_NAME
                valueFrom:
                  secretKeyRef:
                    name: postgres
                    key: db_name
              - name: DB_USER
                valueFrom:
                  secretKeyRef:
                    name: postgres
                    key: db_user
              - name: DB_PASSWORD
                valueFrom:
                  secretKeyRef:
                    name: postgres
                    key: db_password
              - name: DB_HOST
                valueFrom:
                  secretKeyRef:
                    name: postgres
                    key: db_host
              - name: DB_PORT
                valueFrom:
                  secretKeyRef:
                    name: postgres
                    key: db_port
              - name: SECRET_KEY
                valueFrom:
                  secretKeyRef:
                    name: django
                    key: secret_key
