scanner-deployment.yaml
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "streamer"
  namespace: "default"
  labels:
    app: "streamer"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "streamer"
  template:
    metadata:
      labels:
        app: "streamer"
    spec:
      containers:
      - name: "streamer"
        image: "gcr.io/polititweet/github.com/milesmcc/polititweet:f7933b2a2f086e65f013f7932841d4f7378510d8"
        command: ["python", "manage.py", "stream"]
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "scanner"
  namespace: "default"
  labels:
    app: "scanner"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "scanner"
  template:
    metadata:
      labels:
        app: "scanner"
    spec:
      containers:
      - name: "scanner"
        image: "gcr.io/polititweet/github.com/milesmcc/polititweet:f7933b2a2f086e65f013f7932841d4f7378510d8"
        command: ["python", "manage.py", "scan", "--infinite"]
